Another attempt to fix scrollbar

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -93,3 +93,7 @@
     flex-direction: column;
   }
 }
+
+.MuiTabs {
+    flex-direction: row;
+}
